--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
 
 
       </header>
-      <main>
+      <section>
       	<h2>Overview</h2>
       	<p>The project aims to implement the functionality of the Linux/Unix command <kbd>rm -rf</kbd> (sometime also pronounced "rimraf") in Node JS as a learning exercise.</p>
-      </main>
+      </section>
       <footer>
         <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
       </footer>
